# BigInteger

./: .travis.yml  BigInteger.cpp  BigInteger.hpp  CMakeLists.txt  Doxyfile  README.md  main.cpp  tests.cpp
Calculator/: AbstractToken.hpp  BracketToken.cpp  BracketToken.hpp  CMakeLists.txt  Calculator.hpp  ExprInPolishNotation.hpp  OperandToken.hpp  OperatorToken.hpp  Utils.hpp
